# staticsort

./: .travis.yml  Cargo.toml  README.md
ci/: run_linux_and_mac.sh  run_windows.bat
examples/: main.rs
src/: lib.rs
