[package]
name = "staticsort"
description = "Implements a macro providing a compile-time quicksort function for arrays of any length, containing any primitive Copy type with a PartialOrd implementation."
repository = "https://github.com/slightlyoutofphase/staticsort"
documentation = "https://docs.rs/staticsort/"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.5"
authors = ["SlightlyOutOfPhase <slightlyoutofphase@gmail.com>"]
keywords = ["sort", "array", "quicksort", "sorting", "ord"]
categories = ["data-structures", "no-std", "algorithms"]
edition = "2018"
include = ["Cargo.toml", "rustfmt.toml", "src/**/*.rs", "examples/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "slightlyoutofphase/staticsort"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true
