[package]
name = "staticsort"
description = "Implements a macro providing a compile-time quicksort function for arrays of any length, containing any primitive Copy type with a PartialOrd implementation."
repository = "https://github.com/slightlyoutofphase/staticsort"
documentation = "https://docs.rs/staticsort/"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.3.0"
authors = ["SlightlyOutOfPhase <slightlyoutofphase@gmail.com>"]
keywords = ["sort", "array", "quicksort", "sorting", "ord"]
categories = ["data-structures", "no-std", "algorithms"]
edition = "2018"
include = ["Cargo.toml", "rustfmt.toml", "src/**/*.rs", "examples/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
repository = "slightlyoutofphase/staticsort"